# fresco

./: .gitignore  .jekyll-metadata  .lastsync  Ancient Egyptian Bronze Osiris Statue  Ancient Egyptian Steatite Scarb  Apple iPhone 6S  Apple iPhone 8  Apple iPhone SE  Burberry Sport  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chanel Coco  Egyptian Shabti for Nes-ankh-ef-maat  Ezine Articles  Jeep Wrangler  LICENSE  PATENTS  README.md  Share it  Sony Xperia  _config.yml  build.gradle  circle.yml  eBooks  ebay IE  ebay NL  gradle.properties  gradlew  gradlew.bat  index-cn.md  index-kr.md  index.md  mvn.gradle  proguard-fresco.pro  release-bintray.gradle  release-sonatype.gradle  release.gradle  release.sh  run_comparison.py  sample-license.md  (+2 more)
.circleci/: config.yml
imagepipeline/nativedeps/downloads/giflib-5.1.1/: Makefile.am  Makefile.in  Makefile.unx  NEWS  aclocal.m4  autogen.sh  build.asc  config.h.in  configure  configure.ac  control  history.asc  test.sh
imagepipeline/nativedeps/downloads/giflib-5.1.1/doc/: 00README  Makefile.am  Makefile.in  gif2rgb.1  gif2rgb.xml  gif87.txt  gif_lib.xml  gifbg.1  gifbg.xml  gifbuild.1  gifbuild.xml  gifclrmp.1  gifclrmp.xml  gifcolor.1  gifcolor.xml  gifecho.1  gifecho.xml  giffix.1  giffix.xml  gifhisto.1  gifhisto.xml  gifinto.1  gifinto.xml  giflib.1  giflib.xml  giftext.1  giftext.xml  giftool.1  giftool.xml  gifwedge.1  gifwedge.xml  intro.xml
imagepipeline/nativedeps/downloads/giflib-5.1.1/doc/whatsinagif/: animation_and_transparency.html  bits_and_bytes.html  index.html  lzw_image_data.html  lzw_image_data_code_table.html
imagepipeline/nativedeps/downloads/giflib-5.1.1/lib/: Makefile.am  Makefile.in  Makefile.unx  gifalloc.c
imagepipeline/nativedeps/downloads/giflib-5.1.1/pic/: Makefile.am  Makefile.in
imagepipeline/nativedeps/downloads/giflib-5.1.1/tests/: fire.dmp  fire.map  fire.rgb  gifgrid.dmp  gifgrid.map  gifgrid.rgb  makefile  porsche.dmp  porsche.map  porsche.rgb  solid2.dmp  solid2.map  solid2.rgb  treescap-interlaced.dmp  treescap-interlaced.rgb  treescap.dmp  treescap.map  welcome2.dmp  welcome2.map  welcome2.rgb  x-trans.dmp  x-trans.map  x-trans.rgb
imagepipeline/nativedeps/downloads/giflib-5.1.1/util/: Makefile.am  Makefile.in  Makefile.unx  getarg.c  getarg.h  gif2rgb.c  gifbg.c  gifbuild.c  gifclrmp.c  gifcolor.c  gifecho.c  giffilter.c  giffix.c  gifhisto.c  gifinto.c  gifsponge.c  giftext.c  giftool.c  gifwedge.c  qprintf.c
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/: BUILDING.txt  CMakeLists.txt  ChangeLog.txt  Makefile.am  Makefile.in  README  README-turbo.txt  acinclude.m4  aclocal.m4  bmp.h  cjpeg.1  cjpeg.c  config.h.in  configure  configure.ac  djpeg.1  doxygen.config  jcdctmgr.c  jcmainct.c  jcmaster.c  jconfig.h.in  jcphuff.c  jdapistd.c  jdatadst-tj.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdct.h  jddctmgr.c  jdhuff.c  jdmaster.c  jdmerge.c  jdphuff.c  jdsample.c  jmemsys.h  jmorecfg.h  jpegint.h  jpeglib.h  jpegtran.1  (+16 more)
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/cmakescripts/: md5cmp.cmake  testclean.cmake
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/doc/html/: annotated.html  classes.html  doxygen.css  functions.html  functions_vars.html  group___turbo_j_p_e_g.html  index.html  modules.html  structtjregion.html  structtjscalingfactor.html  structtjtransform.html
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/doc/html/search/: all_63.html  all_63.js  all_64.html  all_68.html  all_6e.html  all_6f.html  all_6f.js  all_72.html  all_72.js  all_74.html  all_74.js  all_77.html  all_77.js  all_78.html  all_79.html  all_79.js  classes_74.html  classes_74.js  enums_74.html  enums_74.js  enumvalues_74.html  enumvalues_74.js  functions_74.html  functions_74.js  groups_74.html  groups_74.js  search.css  search.js  typedefs_74.html  typedefs_74.js  variables_63.html  variables_64.html  variables_64.js  variables_68.html  variables_68.js  variables_6e.html  variables_6e.js  variables_6f.html  variables_72.html  variables_74.html  (+5 more)
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/java/: CMakeLists.txt  MANIFEST.MF  Makefile.am  Makefile.in  TJBench.java  TJExample.java  TJUnitTest.java  org_libjpegturbo_turbojpeg_TJCompressor.h  org_libjpegturbo_turbojpeg_TJDecompressor.h
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/java/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html  package-list  serialized-form.html
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/java/org/libjpegturbo/turbojpeg/: TJ.java  TJCompressor.java  TJCustomFilter.java  TJDecompressor.java  TJLoader.java.in  TJLoader.java.tmpl  TJScalingFactor.java  TJTransform.java  TJTransformer.java
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/md5/: Makefile.am  Makefile.in  md5cmp.c  md5hl.c
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/release/: Description.plist.in  Info.plist.in  License.rtf  ReadMe.rtf  Welcome.rtf  deb-control.tmpl  libjpeg-turbo.nsi.in  libjpeg-turbo.spec.in  makecygwinpkg.in  makedpkg.in  makemacpkg.in  uninstall.in
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/sharedlib/: CMakeLists.txt
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/simd/: CMakeLists.txt  Makefile.am  Makefile.in  jcclrss2.asm  jccolss2-64.asm  jccolss2.asm  jcgrammx.asm  jcgrass2.asm  jcgrymmx.asm  jcgryss2.asm  jcqnt3dn.asm  jcqntmmx.asm  jcqnts2i-64.asm  jcsammmx.asm  jcsamss2.asm  jdclrmmx.asm  jdcolmmx.asm  jdct.inc  jdmermmx.asm  jdmerss2-64.asm  jdmrgmmx.asm  jdsammmx.asm  jdsamss2.asm  jfss2fst-64.asm  jfsseflt-64.asm  ji3dnflt.asm  jimmxfst.asm  jimmxred.asm  jiss2flt-64.asm  jiss2flt.asm  jiss2int.asm  jsimd_x86_64.c  jsimdcfg.inc.h  jsimdext.inc
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/testimages/: nightshot_iso_100.txt  testorig.ppm
imagepipeline/nativedeps/downloads/libjpeg-turbo-1.3.1/win/: config.h.in  jconfig.h.in  jpeg62-memsrcdst.def  jpeg62.def  jpeg7-memsrcdst.def  jpeg7.def  jpeg8.def  jsimdcfg.inc
(+4515 files in other folders)
